Troca banner home

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -216,7 +216,7 @@ const clientesProgramas = [
 	
 
 
-	<section class="content-line bg-neutral-300 relative secao" id="servicos">	
+	<section class="content-line bg-green-50 relative secao" id="servicos">	
 		
 		<div class="content-line-container py-20">
 
