--- a/assets/index.B2ULrU6a.css
+++ b/assets/index.B2ULrU6a.css
@@ -49,6 +49,7 @@
     --font-sans: "Inter", sans-serif;
     --font-mono: "IBM Plex Mono", monospace;
     --color-red-700: oklch(50.5% .213 27.518);
+    --color-green-50: oklch(98.2% .018 155.826);
     --color-blue-400: oklch(70.7% .165 254.624);
     --color-blue-800: oklch(42.4% .199 265.638);
     --color-blue-950: oklch(28.2% .091 267.935);
@@ -566,12 +567,12 @@
     border-color: var(--color-white);
   }
 
-  .bg-neutral-100 {
-    background-color: var(--color-neutral-100);
+  .bg-green-50 {
+    background-color: var(--color-green-50);
   }
 
-  .bg-neutral-300 {
-    background-color: var(--color-neutral-300);
+  .bg-neutral-100 {
+    background-color: var(--color-neutral-100);
   }
 
   .bg-primary {
@@ -867,8 +868,8 @@ p ~ p {
   min-height: 85vh;
   padding-inline: calc(var(--spacing) * 6);
   padding-block: calc(var(--spacing) * 10);
-  background-image: url("/athena-site-institucional/assets/banner-home.p6SGLQWO.webp");
-  background-position: center;
+  background-image: url("/athena-site-institucional/assets/banner-home.BHgSwJd_.jpg");
+  background-position: top;
   background-size: cover;
   display: grid;
   position: relative;
@@ -1038,7 +1039,7 @@ p ~ p {
 }
 
 .custom-shape-divider-bottom-1748869204 .shape-fill {
-  fill: #d4d4d4;
+  fill: #f0fdf4;
 }
 
 .custom-shape-divider-bottom-1748869302 {
