Ajuste cor hover botão

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
 
 :root {
   --brand-primary: #03738c;
-  --brand-primary-light: #21A2F9;
+  --brand-primary-light: #56b5cc;
   --brand-secondary: #E4D59B;
   --brand-neutral: #cacaca;
   --outer-shadow: 0 0 20px 0 rgba(0,0,0,0.5);
