--- a/assets/index.C2HckBuA.css
+++ b/assets/index.C2HckBuA.css
@@ -772,7 +772,7 @@
 
 :root {
   --brand-primary: #03738c;
-  --brand-primary-light: #21a2f9;
+  --brand-primary-light: #56b5cc;
   --brand-secondary: #e4d59b;
   --brand-neutral: #cacaca;
   --outer-shadow: 0 0 20px 0 #00000080;
