Ajuste de texto e programas

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -308,7 +308,7 @@ const clientesProgramas = [
 
 			<div class="mx-auto max-w-6xl mt-12 mb-5">
 				<h2 class="uppercase text-3xl text-primary-light font-bold mb-2">Programas</h2>
-				<p>Conheça todas as instituições que já utilizam o Athena para otimizar sua gestão de Produção Científica.</p>
+				<p>Também é possível utilizar o Athena para programas específicos da sua institução. Veja quem já está usando:</p>
 			</div>			
 
 			<div class="clientes-wrapper clientes-programas max-w-6xl mx-auto">
