Ajustes de animações e hero

--- a/src/components/AppHeaderConteudoLegal.astro
+++ b/src/components/AppHeaderConteudoLegal.astro
@@ -5,7 +5,7 @@ import { baseURL } from "../config"
 <header class="content-line main-header">
   <div class="content-line-container ">
       <a href=`${baseURL}/`>
-        <img src=`${baseURL}/assets/img/janus-logo-horizontal.webp` alt="Janus Educare - Consultoria" class="max-w-40 main-header__logo">
+        <img src=`${baseURL}/assets/img/logo-athena.png` alt="Plataforma Athena" class="max-w-40 main-header__logo">
       </a>
       <nav>
         <ul class="flex items-center gap-3">
