--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -182,7 +182,7 @@ const clientesProgramas = [
 				<div class="lg:flex gap-8 mt-8 justify-center">
 
 					<a href="#contato" class="ancora btn px-5 py-3 mt-8 justify-self-center rounded border text-primary border-white bg-white duration-200 hover:text-white hover:bg-primary block">Agende uma Demonstração</a>
-					<a href="https://plataformaathena.com.br/site/form-contato?a=formulario&solicitacao=testegratis" rel="noopener noreferer" class="ancora btn px-5 py-3 mt-8 justify-self-center rounded border text-primary border-white bg-white duration-200 hover:text-white hover:bg-primary block">Solicite um teste gratuito</a>
+					<a href="https://plataformaathena.com.br/site/form-contato?a=formulario&solicitacao=testegratis" rel="noopener noreferer" class="ancora btn px-5 py-3 mt-8 justify-self-center rounded border text-white border-white  duration-200 hover:text-white hover:bg-primary block">Solicite um teste gratuito</a>
 				</div>
 			</div>
 		</div>
@@ -235,11 +235,11 @@ const clientesProgramas = [
 					<p>Os relatórios fornecidos pela Plataforma Athena possuem como fonte o Currículo Lattes e a Plataforma Sucupira.</p>
 				</Card>
 
-				<div class="image-wrapper">
+				<div class="image-wrapper" data-speed="1.3">
 					<img src="assets/img/plataforma-athena/demo-athena-home.png" width={"550"} height={"auto"} alt="" class="demo-image demo-menu"/> 
 				</div>
 
-				<div class="image-wrapper">
+				<div class="image-wrapper"  data-speed="1.1r">
 					<img src="assets/img/plataforma-athena/athena-demonstracao-relatorios.png" width={"550"} height={"auto"} alt=""  class="demo-image demo-dados"/> 
 				</div>	
 				
@@ -263,7 +263,7 @@ const clientesProgramas = [
 					<p>Repositório de Projetos de Pesquisa dos docentes e discentes extraídos a partir dos Currículos Lattes e da Plataforma Sucupira.</p>
 				</Card>			
 				
-				<div class=`image-wrapper  bg-[url(${baseURL}/assets/img/plataforma-athena/analise-dados.jpg)] bg-center bg-cover rounded-xl`>
+				<div class=`image-wrapper  bg-[url(${baseURL}/assets/img/plataforma-athena/analise-dados.jpg)] bg-center bg-cover rounded-xl`  data-speed="0.9">
 					<img src="assets/img/plataforma-athena/analise-dados.jpg" width={"550"} height={"auto"} alt=""  class="analise-dados rounded w-full h-full"/> 
 				</div>
 
@@ -273,7 +273,7 @@ const clientesProgramas = [
 					<a href="#contato" class="ancora btn px-5 py-3 mt-8 justify-self-center rounded border text-white border-white bg-primary duration-200 hover:text-primary hover:bg-white hover:border-primary block w-full">Saiba mais sobre a plataforma!</a>
 				</Card>			
 
-				<div class="flex items-center justify-center">
+				<div class="flex items-center justify-center" data-speed="1.2r">
 					<div class="image-wrapper">
 						<img src=`${baseURL}/assets/img/logo-athena.png` alt="Plataforma Athena" class="max-w-40 main-header__logo">
 					</div>
