--- a/assets/index.DcAsIET9.css
+++ b/assets/index.DcAsIET9.css
@@ -775,6 +775,7 @@
   --brand-primary-light: #56b5cc;
   --brand-secondary: #e4d59b;
   --brand-neutral: #cacaca;
+  --brand-highlight: #55d6f5;
   --outer-shadow: 0 0 20px 0 #00000080;
 }
 
@@ -868,8 +869,8 @@ p ~ p {
   min-height: 85vh;
   padding-inline: calc(var(--spacing) * 6);
   padding-block: calc(var(--spacing) * 10);
-  background-image: url("/athena-site-institucional/assets/banner-home.BHgSwJd_.jpg");
-  background-position: top;
+  background-image: url("/athena-site-institucional/assets/banner-home.VssTBpTU.jpg");
+  background-position: center;
   background-size: cover;
   display: grid;
   position: relative;
@@ -882,7 +883,7 @@ p ~ p {
   content: var(--tw-content);
   background-color: var(--color-primary);
   content: var(--tw-content);
-  opacity: .7;
+  opacity: .75;
   position: absolute;
 }
 
