Ajustes de texto e inclusão de logos de programas

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,10 +73,7 @@ const clientes = [
 	{
 		"nome": "Universidade São judas",
 		"logo": "usjt.jpg",
-	},					
-]
-
-const clientesProgramas = [
+	},			
 	{
 		"nome": "Fundação Dom Cabral",
 		"logo": "fdc.jpg",
@@ -91,60 +88,153 @@ const clientesProgramas = [
 		"nome": "Instituto Agronômico",
 		"logo": "iac.jpg",
 		"programas": ["Agricultura tropical e subtropical"]
-	},	
-	{
-		"nome": "IPEA",
-		"logo": "ipea.jpg",
-		"programas": ["Políticas públicas e desenvolvimento"]
-	},	
+	},				
+]
+
+// const clientesProgramas = [
+
+// 	// {
+// 	// 	"nome": "IPEA",
+// 	// 	"logo": "ipea.jpg",
+// 	// 	"programas": ["Políticas públicas e desenvolvimento"]
+// 	// },	
+// 	{
+// 		"nome": "PUC-Rio",
+// 		"logo": "puc-rio-educacao.jpg",
+// 		"programas": ["Educação", "Direito"]
+// 	},	
+// 	{
+// 		"nome": "UEL - Universidade Estadual de Londrina",
+// 		"logo": "uel-enfermagem.jpg",
+// 		"programas": ["Enfermagem"]
+// 	},	
+// 	{
+// 		"nome": "UERJ - Universidade Estadual do Rio de Janeiro",
+// 		"logo": "uerj-direito.jpg",
+// 		"programas": ["Direito"]
+// 	},	
+// 	{
+// 		"nome": "UFF - Universidade Federal Fluminense",
+// 		"logo": "uff-ciencia-da-informacao.jpg",
+// 		"programas": ["Ciência da informação"]
+// 	},	
+// 	{
+// 		"nome": "UFF - Universidade Federal Fluminense",
+// 		"logo": "uff-historia.jpg",
+// 		"programas": ["História"]
+// 	},		
+// 	{
+// 		"nome": "UFPA - Universidade Federal do Pará",
+// 		"logo": "ufpa-engenharia-sanitaria-ambiental.jpg",
+// 		"programas": ["PPGSA - Engenharia sanitária e ambiental"]
+// 	},	
+// 	{
+// 		"nome": "UFPB - Universidade Federal da Paraíba",
+// 		"logo": "ufpb-engenharia-eletrica.jpg",
+// 		"programas": ["Engenharia elétrica"]
+// 	},	
+// 	{
+// 		"nome": "UFPEL - Universidade Federal de Pelotas",
+// 		"logo": "ufpel-memoria-cultural.jpg",
+// 		"programas": ["Memória social e patrimônio cultural"]
+// 	},	
+// 	{
+// 		"nome": "UNB - Universidade de Brasília",
+// 		"logo": "unb-educacao.jpg",
+// 		"programas": ["Educação"]
+// 	},	
+// 	{
+// 		"nome": "UNB - Universidade de Brasília",
+// 		"logo": "unb-ciencias-reabilitacao.jpg",
+// 		"programas": ["Ciências da reabilitação"]
+// 	},	
+// 	{
+// 		"nome": "UNB - Universidade de Brasília",
+// 		"logo": "unb-ciencia-tecnologia-saude.jpg",
+// 		"programas": ["Ciências e tecnologias em saúde"]
+// 	},			
+// 	{
+// 		"nome": "Univali - Universidade do Vale do Itajaí",
+// 		"logo": "univali-ciencia-juridica.jpg",
+// 		"programas": ["Ciência jurídica"]
+// 	},	
+// 	{
+// 		"nome": "USP/RB - USP Ribeirão Preto",
+// 		"logo": "usp-rp-quimica.jpg",
+// 		"programas": ["Química"]
+// 	},							
+// ]
+
+const clientesProgramas = [
+
+	// {
+	// 	"nome": "IPEA",
+	// 	"logo": "ipea.jpg",
+	// 	"programas": ["Políticas públicas e desenvolvimento"]
+	// },	
 	{
 		"nome": "PUC-Rio",
-		"logo": "puc-rio.jpg",
+		"logo": "puc-rio-educacao.jpg",
 		"programas": ["Educação", "Direito"]
 	},	
 	{
-		"nome": "UEL - Universidade Estadual de Londrina",
-		"logo": "uel.jpg",
+		"nome": "UEL",
+		"logo": "uel-enfermagem.jpg",
 		"programas": ["Enfermagem"]
 	},	
 	{
-		"nome": "UERJ - Universidade Estadual do Rio de Janeiro",
-		"logo": "uerj.jpg",
+		"nome": "UERJ",
+		"logo": "uerj-direito.jpg",
 		"programas": ["Direito"]
 	},	
 	{
-		"nome": "UFF - Universidade Federal Fluminense",
-		"logo": "uff.jpg",
-		"programas": ["Ciência da informação", "História"]
+		"nome": "UFF",
+		"logo": "uff-ciencia-da-informacao.jpg",
+		"programas": ["Ciência da informação"]
 	},	
 	{
-		"nome": "UFPA - Universidade Federal do Pará",
-		"logo": "ufpa.jpg",
-		"programas": ["Engenharia sanitária e ambiental - PPGSA"]
+		"nome": "UFF",
+		"logo": "uff-historia.jpg",
+		"programas": ["História"]
+	},		
+	{
+		"nome": "UFPA",
+		"logo": "ufpa-engenharia-sanitaria-ambiental.jpg",
+		"programas": ["Engenharia sanitária e ambiental"]
 	},	
 	{
-		"nome": "UFPB - Universidade Federal da Paraíba",
-		"logo": "ufpb.jpg",
+		"nome": "UFPB",
+		"logo": "ufpb-engenharia-eletrica.jpg",
 		"programas": ["Engenharia elétrica"]
 	},	
 	{
-		"nome": "UFPEL - Universidade Federal de Pelotas",
-		"logo": "ufpel.jpg",
+		"nome": "UFPEL",
+		"logo": "ufpel-memoria-cultural.jpg",
 		"programas": ["Memória social e patrimônio cultural"]
 	},	
 	{
-		"nome": "UNB - Universidade de Brasília",
-		"logo": "unb.jpg",
-		"programas": ["Educação", "Ciências e tecnologias em saúde", "Ciências da reabilitação"]
+		"nome": "UNB",
+		"logo": "unb-educacao.jpg",
+		"programas": ["Educação"]
 	},	
 	{
-		"nome": "Univali - Universidade do Vale do Itajaí",
-		"logo": "univali.jpg",
+		"nome": "UNB",
+		"logo": "unb-ciencias-reabilitacao.jpg",
+		"programas": ["Ciências da reabilitação"]
+	},	
+	{
+		"nome": "UNB",
+		"logo": "unb-ciencia-tecnologia-saude.jpg",
+		"programas": ["Ciências e tecnologias em saúde"]
+	},			
+	{
+		"nome": "Univali",
+		"logo": "univali-ciencia-juridica.jpg",
 		"programas": ["Ciência jurídica"]
 	},	
 	{
-		"nome": "USP/RB - USP Ribeirão Preto",
-		"logo": "usp-rp.jpg",
+		"nome": "USP/RB",
+		"logo": "usp-rp-quimica.jpg",
 		"programas": ["Química"]
 	},							
 ]
@@ -228,35 +318,35 @@ const clientesProgramas = [
 			<div class="grid md:grid-cols-3 mx-auto max-w-7xl gap-20 mt-20 funcioanlidades-wrapper">
 
 				<Card titulo="Pessoas" icone="diversity_2">
-						<p>As pessoas registradas na Plataforma Athena estão sincronizadas com a base do Currículo Lattes do CNPq e com a Plataforma Sucupira da CAPES.</p>
+						<p>Gerencie os registros dos docentes, discente e egressos dos Programas, envie e-mails e acompanhe a data da atualização dos Currículos Lattes.</p>
 				</Card>
 
 				<Card titulo="Relatórios" icone="search_insights">
-					<p>Os relatórios fornecidos pela Plataforma Athena possuem como fonte o Currículo Lattes e a Plataforma Sucupira.</p>
+					<p>Gere relatórios customizáveis de produção científica, das dissertações e teses, das atividades de docência, da atuação profissional e muito mais...</p>
 				</Card>
 
 				<div class="image-wrapper" data-speed="1.3">
 					<img src="assets/img/plataforma-athena/demo-athena-home.png" width={"550"} height={"auto"} alt="" class="demo-image demo-menu"/> 
 				</div>
 
-				<div class="image-wrapper"  data-speed="1.1r">
+				<div class="image-wrapper" data-speed="1.1r">
 					<img src="assets/img/plataforma-athena/athena-demonstracao-relatorios.png" width={"550"} height={"auto"} alt=""  class="demo-image demo-dados"/> 
 				</div>	
 				
-				<Card titulo="Formulários" icone="assignment">
-					<p>Os formulários na Plataforma Athena foram criados para que os docentes, discentes e egressos interajam na complementação de informações qualitativas.</p>
+				<Card titulo="Formulários Sucupira" icone="assignment">
+					<p>Crie eventos para coleta de informações qualitativas por meio da interação com docentes, discentes e egressos, fortalecendo os processos e evidenciando o impacto social do seu programa.</p>
 				</Card>					
 
 				<Card titulo="Autoavaliação" icone="question_exchange">
-					<p>Este módulo propõe a ser uma ferramenta para que os gestores possam estabelecer um processo estruturado de autoavaliação, visando à elaboração do Planejamento Estratégico.</p>
+					<p>Crie eventos de autoavaliação personalizados de acordo com o perfil do seu Programa, gerencie todo o processo com eficiência e gere relatórios analíticos com gráficos interativos (Power BI). Adote modelos prontos de autoavaliação ou implemente o seu próprio, com suporte técnico e total segurança.</p>
 				</Card>		
 				
 				<Card titulo="Alertas Sucupira" icone="report">
-					<p>Auxilia os usuários na elaboração do Relatório Sucupira, fornecendo alertas para identificação de eventuais lacunas de preenchimento.</p>
+					<p>Aprimore a qualidade dos relatórios Sucupira com o auxílio de alertas inteligentes, que permitem ao usuário identificar falhas de preenchimento e outras inconsistências na gestão do Programa.</p>
 				</Card>				
 				
-				<Card titulo="Tabela de Indicadores" icone="monitoring">
-					<p>Essas tabelas com indicadores diversos agrupadas em duas categorias: Dados Gerais e Produtividade.</p>
+				<Card titulo="Indicadores" icone="monitoring">
+					<p>Inovamos ao permitir que os coordenadores criem tabelas customizáveis para mensurar o desempenho da produtividade de docentes e discentes, com base nos dados do Currículo Lattes. Também disponibiliza dezenas de indicadores estratégicos extraídos da Plataforma Sucupira, com dados gerais dos Programas quanto da Produção científica.</p>
 				</Card>			
 				
 				<Card titulo="Projetos de Pesquisa" icone="quick_reference_all">
@@ -267,17 +357,23 @@ const clientesProgramas = [
 					<img src="assets/img/plataforma-athena/analise-dados.jpg" width={"550"} height={"auto"} alt=""  class="analise-dados rounded w-full h-full"/> 
 				</div>
 
+				<Card titulo="Acompanhamento de Egressos" icone="school">
+					<p>Implemente e automatize o acompanhamento dos egressos do seu Programa de forma simples e ágil, com base em modelos personalizáveis. Gere relatórios detalhados sobre a trajetória e atuação dos egressos e visualize as informações em um mapa de geolocalização inteligente.</p>
+				</Card>					
+
 				
 				<Card titulo="E muito mais" icone="more_horiz">
 					<p>E ainda tem muito mais a ser explorado!</p>
 					<a href="#contato" class="ancora btn px-5 py-3 mt-8 justify-self-center rounded border text-white border-white bg-primary duration-200 hover:text-primary hover:bg-white hover:border-primary block w-full">Saiba mais sobre a plataforma!</a>
 				</Card>			
 
-				<div class="flex items-center justify-center" data-speed="1.2r">
+				
+
+				<!-- <div class="flex items-center justify-center" data-speed="1.2r">
 					<div class="image-wrapper">
 						<img src=`${baseURL}/assets/img/logo-athena.png` alt="Plataforma Athena" class="max-w-40 main-header__logo">
 					</div>
-				</div>
+				</div> -->
 				
 		
 			</div>
@@ -308,7 +404,7 @@ const clientesProgramas = [
 
 			<div class="mx-auto max-w-6xl mt-12 mb-5">
 				<h2 class="uppercase text-3xl text-primary-light font-bold mb-2">Programas</h2>
-				<p>Também é possível utilizar o Athena para programas específicos da sua institução. Veja quem já está usando:</p>
+				<p>O seu Programa também pode fazer parte do nosso portfólio. Veja os Programas que já utilizam a Plataforma Athena.</p>
 			</div>			
 
 			<div class="clientes-wrapper clientes-programas max-w-6xl mx-auto">
@@ -316,7 +412,11 @@ const clientesProgramas = [
 					clientesProgramas.map((cliente) => {
 						return (
 							<div class="logo-cliente" data-programas={cliente.programas}>
-									<img src={`${baseURL}/assets/img/logos-clientes/${cliente.logo}`} alt={cliente.nome} class="max-w-full">
+									<figure>
+										<p>{cliente.nome}</p>
+										<img src={`${baseURL}/assets/img/logos-programas/${cliente.logo}`} alt={cliente.nome} class="max-w-full">
+										<figcaption>{cliente.programas[0]}</figcaption>
+									</figure>
 							</div>
 						)
 					})
