--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -364,11 +364,28 @@ html {
 
 .clientes-wrapper {
   @apply grid gap-8;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 
 .logo-cliente {
   @apply border-blue-950 border-2 rounded-md p-4 flex items-center justify-center overflow-hidden bg-white;
+}
+
+.clientes-programas {
+  @apply grid gap-8;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  .logo-cliente {
+    @apply text-center items-start;
+    p {
+      @apply text-primary-light font-semibold;
+    }
+    figure {
+      @apply flex flex-col h-full;
+    }
+    figcaption {
+      @apply font-semibold text-primary leading-none  mt-auto;
+    }
+  }
 }
 
 .iframe-video-wrapper {
