--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,15 @@ const {conteudoLegal} = Astro.props;
 <!doctype html>
 <html lang="pt-br">
 	<head>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-NS5GPCG4');</script>
+	<!-- End Google Tag Manager -->		
+
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href=`${baseURL}/favicon.ico` />
@@ -22,6 +31,12 @@ const {conteudoLegal} = Astro.props;
 
 	</head>
 	<body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NS5GPCG4"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->		
+
 		{
 			!conteudoLegal ?
 			<AppHeader /> :
@@ -40,14 +55,14 @@ const {conteudoLegal} = Astro.props;
 		<script is:inline src=`${baseURL}/vendors/gsap/ScrollTrigger.min.js`></script>
 		<script is:inline src=`${baseURL}/vendors/gsap/ScrollToPlugin.min.js`></script>
 		<script is:inline src=`${baseURL}/vendors/gsap/ScrollSmoother.min.js`></script>
-		<script is:inline src="https://unpkg.com/@popperjs/core@2"></script>
-		<script is:inline src="https://unpkg.com/tippy.js@6"></script>
-		<!-- <script is:inline src="https://cdn.jsdelivr.net/npm/@floating-ui/core@1.7.1"></script>
-		<script is:inline src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.7.1"></script>		 -->
+		<!-- <script is:inline src="https://unpkg.com/@popperjs/core@2"></script>
+		<script is:inline src="https://unpkg.com/tippy.js@6"></script> -->
 		<script is:inline src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 		<script is:inline src=`${baseURL}/vendors/jquery-validate/jquery.validate.min.js`></script>
 		<script is:inline src=`${baseURL}/vendors/jquery-mask/jquery.mask.min.js`></script>
 		<script is:inline src=`${baseURL}/js/application.js`></script>
+		<script is:inline type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+		<script is:inline src="https://www.google.com/recaptcha/api.js" async defer></script>		
 		<script is:inline src=`${baseURL}/js/form-validation.js`></script>
 
 
