--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -271,8 +271,8 @@ const clientesProgramas = [
 
 				<div class="lg:flex gap-8 mt-8 justify-center">
 
-					<a href="#contato" class="ancora btn px-5 py-3 mt-8 justify-self-center rounded border text-primary border-white bg-white duration-200 hover:text-white hover:bg-primary block">Agende uma Demonstração</a>
-					<a href="https://plataformaathena.com.br/site/form-contato?a=formulario&solicitacao=testegratis" rel="noopener noreferer" class="ancora btn px-5 py-3 mt-8 justify-self-center rounded border text-white border-white  duration-200 hover:text-white hover:bg-primary block">Solicite um teste gratuito</a>
+					<a href="#contato" class="ancora uppercase btn px-5 py-3 mt-8 justify-self-center rounded border text-primary border-white bg-white duration-200 hover:text-white hover:bg-primary-light block">Agende uma Demonstração</a>
+					<a href="https://plataformaathena.com.br/site/form-contato?a=formulario&solicitacao=testegratis" rel="noopener noreferer" class="ancora uppercase btn px-5 py-3 mt-8 justify-self-center rounded border text-white border-white  duration-200 hover:text-white hover:bg-primary-light block">Solicite um teste gratuito</a>
 				</div>
 			</div>
 		</div>
@@ -283,9 +283,9 @@ const clientesProgramas = [
 			<div class="lg:grid gap-10 lg:grid-cols-10 mx-auto max-w-6xl">
 				<div class="flex justify-center flex-col col-span-5">
 					<h2 class="uppercase text-3xl text-primary-light font-bold mb-3">Sobre a Plataforma Athena</h2>	
-						<p>A Plataforma Athena, criada pela JANUS EDUCARE, é muito mais que uma ferramenta — é a aliada estratégica que transforma dados em decisões. Integrando informações do Currículo Lattes e da Plataforma Sucupira, ela cruza tudo com os critérios da CAPES para gerar indicadores confiáveis, relatórios afiados e filtros inteligentes.</p>
+						<p>A <span class="texto-destaque">Plataforma Athena</span>, criada pela <span class="texto-destaque">JANUS EDUCARE</span>, é muito mais que uma ferramenta — é a <span class="texto-destaque">aliada estratégica</span> que transforma dados em decisões. Integrando informações do <span class="texto-destaque">Currículo Lattes e da Plataforma Sucupira</span>, ela cruza tudo com os critérios da <span class="texto-destaque">CAPES</span> para gerar indicadores confiáveis, relatórios afiados e filtros inteligentes.</p>
 
-						<p>O resultado? Uma gestão científica mais eficiente, planejamento estratégico com base sólida e autoavaliações que realmente fazem sentido — tudo em um só lugar, tanto para programas de pós quanto para instituições inteiras. Com a Athena, a produção científica deixa de ser só número e vira estratégia.</p>
+						<p>O resultado? Uma <span class="texto-destaque">gestão científica mais eficiente</span>, planejamento estratégico com base sólida e autoavaliações que realmente fazem sentido — <span class="texto-destaque">tudo em um só lugar</span>, tanto para programas de pós quanto para instituições inteiras. Com a Athena, a produção científica deixa de ser só número e vira estratégia.</p>
 				</div>
 
 				<div class="col-span-5 my-5 lg:my-0">
@@ -312,7 +312,7 @@ const clientesProgramas = [
 
 			<div class="mx-auto max-w-6xl text-center">
 				<h2 class="uppercase text-3xl text-primary-light font-bold mb-2">A Plataforma</h2>
-				<p>Conheça os recursos da Athena que otimizam a gestão científica com inteligência, precisão e estratégia.</p>
+				<p>Conheça os recursos da <span class="texto-destaque">Athena</span> que otimizam a gestão científica com inteligência, precisão e estratégia.</p>
 			</div>
 
 			<div class="grid md:grid-cols-3 mx-auto max-w-7xl gap-20 mt-20 funcioanlidades-wrapper">
