Atualização de favicon

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const {conteudoLegal} = Astro.props;
 
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/x-icon" href=`${baseURL}/favicon.ico` />
+		<link rel="icon" type="image/png" href=`${baseURL}/favicon.png` />
 		<meta name="generator" content={Astro.generator} />
 		<title>Janus Educare</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
